--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2381,6 +2381,11 @@ span.image {
 				width: 100%;
 			}
 
+		.image.featured img {
+			width: 100%;
+			max-width: 588px;
+		}
+
 			@media screen and (max-width: 736px) {
 
 				.image.main {
