--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,8 +10,12 @@
     <h1>{{ page.title }}</h1> {% if page.featured-image %}
     <span class="image featured">
       <img src="{{ site.url }}{{ site.baseurl }}/{{ page.featured-image }}" alt="">
-    </span> {% endif %} {{ content }} {% include footer.html %}
+    </span> {% endif %}
+    <aside class="project-details">
+    {{ content }}
+    </aside>
 
+    {% include footer.html %}
 
 </body>
 
