--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3365,19 +3365,31 @@ span.image {
 
 	.project-details {
     float: right;
-    margin-right: 10%;
-    width: 50%;
+    margin: 0 5%;
+    width: 40%;
   }
 
-		@media screen and (max-width: 995px) {
+		@media screen and (max-width: 1000px) {
 			.project-details {
-				width: 40%
+				width: 30%
 			}
 		}
 
-		@media screen and (max-width: 800px) {
+		@media screen and (max-width: 880px) {
 			.project-details {
 				margin-right: 0;
 				width: 100%
+			}
+		}
+
+	.image.featured img {
+		width: 200%;
+		max-width: 500px;
+	}
+
+		@media screen and (max-width: 550px) {
+			.image.featured img {
+				width: 100%;
+				max-width: 350px;
 			}
 		}
