update tiles include to reflect code in projects_test.html file > still having issues with {{ project.content | truncate: 100 }} liquid tag

--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -1,17 +1,17 @@
 <section class="tiles">
 
-{% for post in site.posts limit:site.front-page-posts %}
-	<article class="style{{ forloop.index }}">
-		<span class="image">
-			<img src="{{ site.url }}{{ site.baseurl }}/images/pic01.jpg" alt="" />
-		</span>
-		<a href="{{ post.url | prepend:site.baseurl | prepend:site.url }}">
-			<h2>{{ post.title }}</h2>
-			<div class="content">
-				<p>{{ post.excerpt }}</p>
-			</div>
-		</a>
-	</article>
-{% endfor %}
+	{% for project in site.projects %}
+		<article class="style{{ forloop.index }}">
+			<span class="image">
+				<img src="{{ site.url }}{{ site.baseurl }}/{{ project.featured-image }}" alt="" />
+			</span>
+			<a href="{{ project.url | prepend:site.baseurl | prepend:site.url }}">
+				<h2>{{ project.title }}</h2>
+			<!--	<div class="content">
+					<p>{{ project.content | truncate: 100 }}</p>
+				</div> -->
+			</a>
+		</article>
+	{% endfor %}
 
 </section>
