--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,14 +4,14 @@
 
 		{% for page in site.pages %}
 		{% if page.path == "index.html" %}
-		<li><a href="{{ page.url | prepend: site.baseurl | remove: "index.html" }}">{{ page.title }}</a></li>
+		<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 		{% endif %} {% endfor %}
 
 		{% for page in site.pages %}
 
 		{% if page.title %}
 
-		<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title | remove: "Home" }}</a></li>
+		<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 
 		{% endif %} {% endfor %}
 	</ul>
