--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,23 +26,23 @@
 		<section>
 			<h2>Follow</h2>
 			<ul class="icons">
-				{% if site.data.footer_follow_info.twitter_username %}
-				<li><a href="https://twitter.com/{{ site.data.footer_follow_info.twitter_username }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+				{% if site.data.footer_follow_info.twitter_url %}
+				<li><a href="{{ site.data.footer_follow_info.twitter_url }}" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 				{% endif %}
-				{% if site.data.footer_follow_info.facebook_URL %}
-				<li><a href="https://www.facebook.com/{{ site.data.footer_follow_info.facebook_URL }}" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+				{% if site.data.footer_follow_info.facebook_url %}
+				<li><a href="{{ site.data.footer_follow_info.facebook_url }}" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 				{% endif %}
-				{% if site.data.footer_follow_info.instagram_username %}
-				<li><a href="https://www.instagram.com/{{ site.data.footer_follow_info.instagram_username }}" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+				{% if site.data.footer_follow_info.instagram_url %}
+				<li><a href="{{ site.data.footer_follow_info.instagram_url }}" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 				{% endif %}
-				{% if site.data.footer_follow_info.dribbble_username %}
-				<li><a href="http://www.dribbble.com/{{ site.data.footer_follow_info.dribbble_username }}" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+				{% if site.data.footer_follow_info.dribbble_url %}
+				<li><a href="{{ site.data.footer_follow_info.dribbble_url }}" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
 				{% endif %}
-				{% if site.data.footer_follow_info.github_username %}
-				<li><a href="https://github.com/{{ site.data.footer_follow_info.github_username }}" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+				{% if site.data.footer_follow_info.github_url %}
+				<li><a href="{{ site.data.footer_follow_info.github_url }}" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 				{% endif %}
-				{% if site.data.footer_follow_info.500px_username %}
-				<li><a href="https://500px.com/{{ site.data.footer_follow_info.500px_username }}" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
+				{% if site.data.footer_follow_info.500px_url %}
+				<li><a href="{{ site.data.footer_follow_info.500px_url }}" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
 				{% endif %}
 				{% if site.data.footer_follow_info.phone %}
 				<li><a href="tel:{{ site.data.footer_follow_info.phone }}" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
