flip blog post title and date in blog list, then adjust spacing

--- a/_sass/components/_list.scss
+++ b/_sass/components/_list.scss
@@ -52,6 +52,17 @@
 			}
 		}
 
+		&.post-list {
+
+			li {
+				margin-bottom: 2em;
+			}
+
+			h2 {
+				margin-bottom: 0;
+			}
+		}
+
 		&.actions {
 			cursor: default;
 			list-style: none;
