--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 
     <h1>{{ page.title }}</h1> {% if page.featured-image %}
     <span class="image blog">
-      <img src="{{ site.url }}{{ site.baseurl }}/{{ page.featured-image }}" alt="">
+      <img src="{{ site.baseurl }}/{{ page.featured-image }}" alt="">
     </span> {% endif %} {{ content }} {% include footer.html %}
 
 
