--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,9 +2,8 @@
 	<h2>Menu</h2>
 	<ul>
 
-		{% for page in site.pages %}
-		{% if page.title %}
-		<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-		{% endif %} {% endfor %}
+		{% for navitem in site.data.sidebar_menu | sort: 'priority' %}
+		<li><a href="{{ navitem.url | prepend: site.baseurl }}">{{ navitem.title }}</a></li>
+		{% endfor %}
 	</ul>
 </nav>
