--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,10 +10,10 @@
     <h1>{{ page.title }}</h1> {% if page.featured-image %}
     <span class="image featured">
       <img src="{{ site.baseurl }}/{{ page.featured-image }}" alt="">
-    </span> {% endif %}
-    <aside class="project-details">
+    </span> {% endif %} {{ content }}
+  <!--  <aside class="project-details">
     {{ content }}
-    </aside>
+  </aside> -->
 
     {% include footer.html %}
 
