add featured.scss to list of imported component files

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,6 +61,7 @@
 	@import 'components/table';
 	@import 'components/button';
 	@import 'components/tiles';
+	@import 'components/featured';
 
 // Layout.
 
