--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,12 +10,7 @@
     <h1>{{ page.title }}</h1> {% if page.featured-image %}
     <span class="image featured">
       <img src="{{ site.baseurl }}/{{ page.featured-image }}" alt="">
-    </span> {% endif %} {{ content }}
-  <!--  <aside class="project-details">
-    {{ content }}
-  </aside> -->
-
-    {% include footer.html %}
+    </span> {% endif %} {{ content }} {% include footer.html %}
 
 </body>
 
