--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,10 +8,9 @@
     {% include header.html %}
 
     <h1>{{ page.title }}</h1> {% if page.featured-image %}
-    <span class="image main">
+    <span class="image featured">
       <img src="{{ site.baseurl }}/{{ page.featured-image }}" alt="">
     </span> {% endif %} {{ content }} {% include footer.html %}
-
 
 </body>
 
