--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -3,7 +3,7 @@
 	{% for project in site.projects %}
 		<article class="style{{ forloop.index }}">
 			<span class="image">
-				<img src="{{ site.url }}{{ site.baseurl }}/{{ project.featured-image }}" alt="" />
+				<img src="{{ site.url }}{{ site.baseurl }}/{{ project.homepage-thumbnail }}" alt="" />
 			</span>
 			<a href="{{ project.url | prepend:site.baseurl | prepend:site.url }}">
 				<h2>{{ project.title }}</h2>
