add some default styles to img elements for images added in markdown or without the .image class

--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -6,6 +6,13 @@
 
 /* Image */
 
+img {
+	border-radius: _size(border-radius);
+	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+} /* For images added via Markdown and/or without class="image" */
+
 	.image {
 		border-radius: _size(border-radius);
 		border: 0;
