update logo url field syntax

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,9 @@
 			<a href="{{ site.baseurl }}/" class="logo">
 				<span class="symbol">
 
-					{% if site.data.site_settings_info.logo-image-url %}
+					{% if site.data.site_settings_info.logo_image %}
 
-					<img src="{{ site.baseurl }}/{{ site.data.site_settings_info.logo-image-url }}" alt="{{ site.data.site_settings_info.title }} Logo" />
+					<img src="{{ site.baseurl }}/{{ site.data.site_settings_info.logo_image }}" alt="{{ site.data.site_settings_info.title }} Logo" />
 
 					{% else %}
 
