--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <h1>{{ page.title }}</h1> {% if page.featured-image %}
+    <h1>{{ page.title }}</h1> {% if page.featured-image and page.featured-image != "" %}
     <span class="image featured">
       <img src="{{ site.baseurl }}/{{ page.featured-image }}" alt="">
     </span> {% endif %} {{ content }} {% include footer.html %}
