--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,8 +63,8 @@
 </div>
 
 <!-- Scripts -->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/skel.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="{{ site.url }}{{ site.baseurl }}/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
+<script src="{{ site.url }}/assets/js/jquery.min.js"></script>
+<script src="{{ site.url }}/assets/js/skel.min.js"></script>
+<script src="{{ site.url }}/assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="{{ site.url }}/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="{{ site.url }}/assets/js/main.js"></script>
