--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.data.site_settings_info.description }}{% endif %}">
-    <link rel="stylesheet" href="{{ "/assets/css/main.css " | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/main.css " | prepend: site.url }}">
 
-    <link rel="icon" type="image/png" href="{{ "/images/favicon.png " | prepend: site.baseurl }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" href="{{ "/images/favicon.png " | prepend: site.url }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.url }}">
 
 </head>
