--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,16 @@
 		<div class="inner">
 
 			<!-- Logo -->
-			<a href="{{ site.baseurl }}/" class="logo">
+			<a href="{{ site.url }}/" class="logo">
 				<span class="symbol">
 
 					{% if site.data.site_settings_info.logo_image %}
 
-					<img src="{{ site.baseurl }}/{{ site.data.site_settings_info.logo_image }}" alt="{{ site.data.site_settings_info.title }} Logo" />
+					<img src="{{ site.url }}/{{ site.data.site_settings_info.logo_image }}" alt="{{ site.data.site_settings_info.title }} Logo" />
 
 					{% else %}
 
-					<img src="{{ site.baseurl }}/{{ site.logo-placeholder }}" alt="Placeholder Logo" />
+					<img src="{{ site.url }}/{{ site.logo-placeholder }}" alt="Placeholder Logo" />
 
 					{% endif %}
 
