--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -3,9 +3,9 @@
 	{% for project in site.projects %}
 		<article class="style{{ forloop.index }}">
 			<span class="image">
-				<img src="{{ site.url }}{{ site.baseurl }}/{{ project.homepage-thumbnail }}" alt="" />
+				<img src="{{ site.url }}/{{ project.homepage-thumbnail }}" alt="" />
 			</span>
-			<a href="{{ project.url | prepend:site.baseurl | prepend:site.url }}">
+			<a href="{{ project.url | prepend:site.url }}">
 				<h2>{{ project.title }}</h2>
 				<div class="content">
 					<p>Project Tags: {{ project.tags | join: ', '}}</p>
