--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <title>{% if page.title %}{{ page.title }} | {{ site.data.site_settings_info.title }}{% else %}{{ site.data.site_settings_info.title | escape }}{% endif %}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.data.site_settings_info.description }}{% endif %}">
+    <meta name="description" content="{% if page.meta_description %}{{ page.meta_description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.data.site_settings_info.description }}{% endif %}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css " | prepend: site.url }}">
 
     <link rel="icon" type="image/png" href="{{ "/images/favicon.png " | prepend: site.url }}">
