--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -7,7 +7,7 @@
 /* Header */
 
 	#header {
-		@include padding(5em, 0, (3em, 0, -5em, 0));
+		@include padding(2em, 0, (2em, 0, -5em, 0));
 
 		.logo {
 			display: block;
@@ -30,8 +30,8 @@
 
 				img {
 					display: block;
-					width: 2em;
-					height: 2em;
+					width: 100%;
+					height: 100%;
 				}
 			}
 		}
