--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,12 +2,6 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-@import 'libs/vars';
-@import 'libs/functions';
-@import 'libs/mixins';
-@import 'libs/skel';
-@import 'font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
 
 /*
@@ -45,12 +39,12 @@
 		)
 	));
 
-// Base.
+// Base
 
 	@import 'base/page';
 	@import 'base/typography';
 
-// Component.
+// Component
 
 	@import 'components/section';
 	@import 'components/icon';
@@ -62,7 +56,7 @@
 	@import 'components/button';
 	@import 'components/tiles';
 
-// Layout.
+// Layout
 
 	@import 'layout/header';
 	@import 'layout/menu';
@@ -71,3 +65,11 @@
 	@import 'layout/wrapper';
 	@import 'layout/project';
 	@import 'layout/post';
+
+// Libs
+
+	@import 'libs/vars';
+	@import 'libs/functions';
+	@import 'libs/mixins';
+	@import 'libs/skel';
+	@import 'font-awesome.min.css';
