update menu info data file and add 'Contact' to menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 <!-- Footer -->
 <footer id="footer">
 	<div class="inner">
-		<section>
+		<section id="contact">
 			<h2>Get in touch</h2>
 			<form method="post" action="https://formspree.io/{{ site.email }}"
       method="POST">
@@ -67,4 +67,5 @@
 <script src="{{ site.url }}/assets/js/skel.min.js"></script>
 <script src="{{ site.url }}/assets/js/util.js"></script>
 <!--[if lte IE 8]><script src="{{ site.url }}/assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="{{ site.url }}/assets/js/page-scroll.js"></script>
 <script src="{{ site.url }}/assets/js/main.js"></script>
