--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
 	<h2>Menu</h2>
 	<ul>
 
-		{% for navitem in site.data.menu_info | sort: 'priority' %}
+		{% for navitem in site.data.menu_info %}
 		<li><a href="{{ navitem.url | prepend: site.url }}">{{ navitem.title }}</a></li>
 		{% endfor %}
 	</ul>
