--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -22,7 +22,8 @@
 				'opacity #{$duration} #{$ease}'
 			));
 			position: relative;
-			width: calc(#{(100% / 3)} - #{$gutter * 1});
+			width: calc(#{(100% / 4)} - #{$gutter * 1});
+			/* 3-tile layout > width: calc(#{(100% / 3)} - #{$gutter * 1}); */
 			margin: $gutter 0 0 $gutter;
 
 			> .image {
