update font to Oswald

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -23,7 +23,7 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Helvetica, sans-serif),
+		family:				('Oswald', 'Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				300,
 		weight-bold:		900,
@@ -41,8 +41,8 @@
 		fg-accent:			#ffffff,
 		border:				#c9c9c9,
 		border-bg:			rgba(144,144,144,0.075),
-		accent1:			#f2849e,
-		accent2:			#7ecaf6,
+		accent1:			#56a0d3, // Blue
+		accent2:			#fec10e, // Gold
 		accent3:			#7bd0c1,
 		accent4:			#c75b9b,
 		accent5:			#ae85ca,
