--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,7 +11,7 @@
 	@import 'libs/skel';
 
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
+@import url('https://fonts.googleapis.com/css?family=Oswald:300|Source+Sans+Pro:300,700,900');
 
 /*
 	Phantom by HTML5 UP
