add bg image to body

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -24,7 +24,8 @@
 		}
 
 	body {
-		background: _palette(bg);
+		background: url("/images/logos/map_only_transparent@2x.png") no-repeat fixed;
+		background-position: right;
 
 		// Prevents animation/transition "flicker" on page load.
 		// Automatically added/removed by js/main.js.
