update tile bg colors to alternate between blue and yellow

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -123,39 +123,17 @@
 				}
 			}
 
-			&.style1 {
+			&.style1,
+			&.style3 {
 				> .image:before {
 					background-color: _palette(accent1);
 				}
 			}
 
-			&.style2 {
-				> .image:before {
-					background-color: _palette(accent2);
-				}
-			}
-
-			&.style3 {
-				> .image:before {
-					background-color: _palette(accent3);
-				}
-			}
-
+			&.style2,
 			&.style4 {
 				> .image:before {
-					background-color: _palette(accent4);
-				}
-			}
-
-			&.style5 {
-				> .image:before {
-					background-color: _palette(accent5);
-				}
-			}
-
-			&.style6 {
-				> .image:before {
-					background-color: _palette(accent6);
+					background-color: _palette(accent2);
 				}
 			}
 
