--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{% if page.meta_description %}{{ page.meta_description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <link rel="stylesheet" href="{{ "/assets/css/main.css " | prepend: site.url }}">
 
-    <link rel="icon" type="image/png" href="{{ "/images/favicon.png " | prepend: site.url }}">
+    <link rel="icon" type="image" href="{{ "/favicon.ico " | prepend: site.url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml " | prepend: site.url }}">
 
