add links to sitemap and privacy policy in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,10 +37,12 @@
 			</ul>
 		</section>
 		<ul class="copyright">
-			<li>&copy; {{ site.title }} 2017. All rights reserved.</li>
+			<li>&copy; {{ site.title }} 2017</li>
 			<li>Silver Strand Physical Therapy is an affiliate of <a href="http://www.risephysicaltherapy.com">RISE Physical Therapy</a></li>
 			<li>Theme Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			<li>Web Strategy: <a href="http://www.sageweb.co">Sage Web Co.</a></li>
+			<li><a href="{{ site.url }}/sitemap">Sitemap</a></li>
+			<li><a href="{{ site.url }}/privacy-policy">Privacy Policy</a></li>
 		</ul>
 	</div>
 </footer>
