add minified js files to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,6 +52,6 @@
 <!-- Scripts -->
 <script src="{{ site.url }}/assets/js/jquery.min.js"></script>
 <script src="{{ site.url }}/assets/js/skel.min.js"></script>
-<script src="{{ site.url }}/assets/js/util.js"></script>
+<script src="{{ site.url }}/assets/js/util.min.js"></script>
 <!--[if lte IE 8]><script src="{{ site.url }}/assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="{{ site.url }}/assets/js/main.js"></script>
+<script src="{{ site.url }}/assets/js/main.min.js"></script>
