--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
 
     <h1>{{ page.title }}</h1> {% if page.featured-image and page.featured-image != "" %}
     <span class="image featured">
-      <img src="{{ site.url }}/{{ page.featured-image }}" alt="">
+      <img src="{{ site.url }}/{{ page.featured-image }}" title="{{ page.title }}" alt="{{ page.title }}">
     </span> {% endif %} {{ content }} {% include footer.html %}
 
 </body>
