--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -6,7 +6,8 @@
 
 /* Footer */
 
-	#footer {
+	#footer,
+	#landing-footer {
 		$gutter: _size(gutter);
 
 		@include padding(5em, 0, (0, 0, 3em, 0));
