--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,16 @@
 	<div class="inner">
 		<section id="contact">
 			<h2>Get in touch</h2>
-			<form method="post" action="https://formspree.io/{{ site.email }}"
-      method="POST">
+			<form name="Contact Form" action="/thank-you/" netlify-honepot="bot-field" method="POST" netlify>
+				<!-- Honeypot Field -->
+        <p class="hidden">
+          <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+        </p>
 				<div class="field half first">
 					<input type="text" name="name" id="name" placeholder="Name" required>
 				</div>
 				<div class="field half">
-					<input type="email" name="_replyto" id="email" placeholder="Email" required>
+					<input type="email" name="email" id="email" placeholder="Email" required>
 				</div>
 				<div class="field">
 					<textarea name="message" id="message" placeholder="Message" required></textarea>
@@ -19,7 +22,6 @@
 				<ul class="actions">
 					<li>
 						<input type="submit" value="Send" class="special">
-						<input type="hidden" name="_next" value="{{ site.baseurl }}/thank-you">
 					</li>
 				</ul>
 			</form>
@@ -37,10 +39,10 @@
 			</ul>
 		</section>
 		<ul class="copyright">
-			<li>&copy; {{ site.title }} 2017</li>
+			<li>&copy; {{ site.title }} <span id="date">DATE</span></li>
 			<li>Silver Strand Physical Therapy is an affiliate of <a href="http://www.risephysicaltherapy.com">RISE Physical Therapy</a></li>
 			<li>Theme Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			<li>Web Strategy: <a href="http://www.sageweb.co">Sage Web Co.</a></li>
+			<li>Web Development: <a href="https://www.zac-heisey.com">Zac Heisey</a></li>
 			<li><a href="{{ site.url }}/sitemap">Sitemap</a></li>
 			<li><a href="{{ site.url }}/privacy-policy">Privacy Policy</a></li>
 		</ul>
@@ -55,3 +57,10 @@
 <script src="{{ site.url }}/assets/js/util.min.js"></script>
 <!--[if lte IE 8]><script src="{{ site.url }}/assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="{{ site.url }}/assets/js/main.min.js"></script>
+<script type="text/javascript">
+	// Copyright Date
+	var date = document.querySelector('#date');
+	var today = new Date();
+	var thisYear = today.getFullYear();
+	date.innerText = thisYear;
+</script>
