--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,36 @@
 <footer id="footer">
 	<div class="inner">
 		<section id="contact">
+			{% if page.title == 'Careers' %}
+			<h2>Work With Us</h2>
+			<form name="Careers Form" action="/thank-you/" netlify-honepot="bot-field" method="POST" netlify>
+				<!-- Honeypot Field -->
+        <p class="hidden">
+          <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+        </p>
+				<div class="field half first">
+					<input type="text" name="name" id="name" placeholder="Name" required>
+				</div>
+				<div class="field half">
+					<input type="email" name="email" id="email" placeholder="Email" required>
+				</div>
+				<div class="field half first">
+					<input type="tel" name="phone" id="phone" placeholder="Phone" required>
+				</div>
+				<div class="field half">
+					<lable for="resume">Please Upload Your Resume (PDF format)</lable>
+					<input type="file" name="resume" id="resume" accept".pdf" required>
+				</div>
+				<div class="field">
+					<textarea name="message" id="message" placeholder="Anything else you'd like to share?" required></textarea>
+				</div>
+				<ul class="actions">
+					<li>
+						<input type="submit" value="Send" class="special">
+					</li>
+				</ul>
+			</form>
+			{% else %}
 			<h2>Get in touch</h2>
 			<form name="Contact Form" action="/thank-you/" netlify-honepot="bot-field" method="POST" netlify>
 				<!-- Honeypot Field -->
@@ -25,6 +55,7 @@
 					</li>
 				</ul>
 			</form>
+			{% endif %}
 		</section>
 		<section>
 			<h2>Follow</h2>
