add Chula Vista location info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -65,7 +65,10 @@
 				<li><a href="{{ site.data.footer_info.instagram_url }}" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="tel:{{ site.data.footer_info.phone }}" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
 				<li><a href="mailto:{{ site.data.footer_info.email }}" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-				<li>{{ site.data.footer_info.address }}</li>
+				<li><strong>Imperial Beach</strong></li>
+				<li>{{ site.data.footer_info.address-1 }}</li>
+				<li><strong>Chula Vista</strong></li>
+				<li>{{ site.data.footer_info.address-2 }}</li>
 				<li>Phone: {{ site.data.footer_info.phone }} | Fax: {{ site.data.footer_info.fax }}</li>
 			</ul>
 		</section>
@@ -73,7 +76,7 @@
 			<li>&copy; {{ site.title }} <span id="date">DATE</span></li>
 			<li>Silver Strand Physical Therapy is an affiliate of <a href="http://www.risephysicaltherapy.com">RISE Physical Therapy</a></li>
 			<li>Theme Design: <a href="http://html5up.net">HTML5 UP</a></li>
-			<li>Web Development: <a href="https://www.zac-heisey.com">Zac Heisey</a></li>
+			<li>Web Development: <a href="http://goodneighbor.agency/">Good Neighbor Agency</a></li>
 			<li><a href="{{ site.url }}/sitemap">Sitemap</a></li>
 			<li><a href="{{ site.url }}/privacy-policy">Privacy Policy</a></li>
 		</ul>
