--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
 			</form>
 			{% else %}
 			<h2>Get in touch</h2>
-			<form name="Contact Form" action="/thank-you/" netlify-honepot="bot-field" method="POST" netlify>
+			<form name="Contact Form" action="/thank-you/" netlify-honepot="bot-field" data-netlify-recaptcha="true" method="POST" data-netlify="true">
 				<!-- Honeypot Field -->
         <p class="hidden">
           <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
@@ -47,8 +47,20 @@
 					<input type="email" name="email" id="email" placeholder="Email" required>
 				</div>
 				<div class="field">
+					<div class="select-wrapper">
+						<select name="patient-type" required>
+							<option selected disabled>-- Patient Type --</option>
+							<option value="New Patient">New Patient</option>
+							<option value="Current Patient">Current Patient</option>
+							<option value="Non-Patient">Non-Patient</option>
+						</select>
+					</div>
+				</div>
+				<div class="field">
 					<textarea name="message" id="message" placeholder="Message" required></textarea>
 				</div>
+				<!-- Netlify reCAPTCHA -->
+				<div data-netlify-recaptcha="true"></div>
 				<ul class="actions">
 					<li>
 						<input type="submit" value="Send" class="special">
