make menu links relative

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
 	<ul>
 
 		{% for navitem in site.data.menu_info.navmenu %}
-		<li><a href="{{ navitem.url | prepend: site.url }}">{{ navitem.title }}</a></li>
+		<li><a href="{{ navitem.url }}">{{ navitem.title }}</a></li>
 		{% endfor %}
 	</ul>
 </nav>
