update staff page

--- a/_includes/staff-tiles.html
+++ b/_includes/staff-tiles.html
@@ -3,7 +3,7 @@
 	{% for page in site.stafftiles %}
 		<article>
 			<span>
-				<img src="{{ site.url }}/{{ page.bio-thumbnail }}" title="{{ page.title }} | {{ page.creds }}" alt="{{ page.title }}" />
+				<img src="/{{ page.bio-thumbnail }}" title="{{ page.title }} | {{ page.creds }}" alt="{{ page.title }}" />
 			</span>
 			<h2>{{ page.title }}</h2>
 			<h4>{{ page.creds }}</h4>
