--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
 
 <body>
 
-    {% include header.html %} {{ content }} {% include footer.html %}
+    {% include header.html %}
+
+    {{ content }}
 
 </body>
 
