comment out nav and menu include

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,16 +20,16 @@
 
 			</a>
 			<!-- Nav -->
-			<nav>
+			<!-- <nav>
 				<ul>
 					<li><a href="#menu">Menu</a></li>
 				</ul>
-			</nav>
+			</nav> -->
 
 		</div>
 	</header>
 
-	{% include menu.html %}
+	<!-- {% include menu.html %} -->
 
 	<!-- Main -->
 	<div id="main">
